# claude-keyboard

./: .ai_changes.json  .gitattributes  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: desktop.yml  pages.yml
app/: README.md  app.js  index.html  styles.css
desktop/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: ble.rs  clawd.rs  main.rs
desktop/ui/: app.js  index.html  styles.css
docs/: app.md  index.md  models.md  package-lock.json  package.json  setup.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: ClawdApp.vue  ModelDownloads.vue
docs/scripts/: prepare.mjs
models/: 3d-print.3mf  LICENSE  assembly.FCStd  mascot-bottom.3mf  mascot-top.3mf  mascot.FCStd
program/xiao_ble_keyboard/: .gitignore  README.md  xiao_ble_keyboard.ino
