[package]
name = "clawd-control"
version = "0.1.0"
description = "Clawd desktop control app"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
btleplug = "0.11"
uuid = "1"
futures = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
